feat: swagger优化